<resources>
    <string name="app_name">DronoKart</string>
    <string name="logo">logo</string>
    <string name="banner">banner</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="more">More</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="top_picks_for_you">Top picks for you</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="category_image">Category Image</string>
    <string name="default_rating">3.5</string>
    <string name="product_rating_star">Product Rating Star</string>
    <string name="old_price">Old Price</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy">Buy</string>
    <string name="description">Description</string>
    <string name="specification">Specification</string>
    <string name="review">Review</string>
    <string name="product_image">Product Image</string>
    <string name="rating">Rating</string>
    <string name="rate_product">Rate Product</string>
    <string name="default_rated_count">( 3 ratings )</string>
    <string name="my_orders">My Orders</string>
    <string name="my_address">My Address</string>
    <string name="logout">Logout</string>
    <string name="notification_settings">Notification Preferences</string>
    <string name="account_settings">Account Settings</string>
    <string name="frequent_ask_questions">Frequent Ask Questions</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="continue_order">Continue</string>
    <string name="total_amount">Total Amount</string>
    <string name="final_amount_default">₹ xyz</string>
    <string name="default_quantity">Qty: 1</string>
    <string name="remove">Remove</string>
</resources>