<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    android:background="@drawable/custom_background"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simple_logo" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/product_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_new_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/final_amount_default"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_title" />

    <TextView
        android:id="@+id/product_old_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/old_price"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/product_new_price"
        app:layout_constraintEnd_toStartOf="@+id/product_new_price" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#363637"
        app:layout_constraintBottom_toBottomOf="@+id/product_old_price"
        app:layout_constraintEnd_toEndOf="@+id/product_old_price"
        app:layout_constraintStart_toStartOf="@+id/product_old_price"
        app:layout_constraintTop_toTopOf="@+id/product_old_price" />

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/default_quantity"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/product_old_price"
        app:layout_constraintEnd_toStartOf="@+id/product_old_price"
        app:layout_constraintStart_toEndOf="@+id/product_image" />

    <TextView
        android:id="@+id/removeProductTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/remove"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_image" />


</androidx.constraintlayout.widget.ConstraintLayout>