<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="8dp"
    android:elevation="3dp"
    android:background="@drawable/custom_background">

    <LinearLayout
        android:id="@+id/linearLayout_rating1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:background="@drawable/top_background"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_rating2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ratingTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/rating"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rate_product_button"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/custom_background"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/rate_product"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_rating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_rating1">

        <TextView
            android:id="@+id/ratingValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_rating"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/RatingImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/rating"
            app:srcCompat="@drawable/ic_baseline_stars_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/default_rated_count" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>